--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,20 +8,21 @@
     tools:context="se.kth.sda.othello.MainActivity">
 
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/edit_login"
-        android:layout_weight="1"/>
-    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
+    <EditText
         android:id="@+id/edit_pwd"
-        android:layout_weight="1"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log in"
-        android:onClick="login"/>
+        android:onClick="login"
+        android:text="Log in" />
 
 </LinearLayout>
