--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/logo_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@mipmap/logo_circle"
