--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -29,6 +29,7 @@
             android:layout_height="wrap_content"
             android:text="Othello"
             android:textAlignment="center"
+            android:textColor="@android:color/background_dark"
             android:textSize="60sp" />
 
         <TextView
@@ -44,7 +45,7 @@
 
     <LinearLayout
         android:id="@+id/button_holder"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical">
@@ -54,15 +55,19 @@
             android:layout_width="wrap_content"
             android:layout_height="70dp"
             android:layout_weight="1"
+            android:background="@mipmap/button"
             android:onClick="startHumanGame"
+            android:padding="20dp"
             android:text="Start a Human vs Human game!" />
 
         <Button
             android:id="@+id/quit_game"
-            android:layout_width="70dp"
+            android:layout_width="100dp"
             android:layout_height="50dp"
+            android:layout_marginTop="20dp"
             android:layout_weight="1"
-            android:alpha="0.5"
+            android:alpha="0.7"
+            android:background="@mipmap/button"
             android:onClick="exitGame"
             android:text="Quit" />
     </LinearLayout>
