--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:text="Othello"
             android:textAlignment="center"
+            android:textColor="@android:color/background_dark"
             android:textSize="60sp" />
 
         <TextView
