--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -58,7 +58,17 @@
             android:background="@drawable/border_layout"
             android:onClick="startHumanGame"
             android:padding="20dp"
-            android:text="Start a Human vs Human game!" />
+            android:text="   Start a Human vs Human game!   " />
+
+        <Button
+            android:id="@+id/start_game"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:layout_weight="1"
+            android:background="@drawable/border_layout"
+            android:onClick="startHumanVsComputerGame"
+            android:padding="20dp"
+            android:text="Start a Human vs Computer game!" />
 
         <Button
             android:id="@+id/quit_game"
